player component edit

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,6 +2,7 @@
     width: 34px;
     height: 45px;
     border-radius: 5px;
+    padding: 0 !important;
     .frontCard{
         width: inherit;
         height: inherit;
