--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,6 +1,6 @@
 .cardContainer {
-    width: 41px;
-    height: 55px;
+    width: 36px;
+    height: 50px;
     border-radius: 5px;
     padding: 0 !important;
     margin: 1px;
@@ -14,12 +14,22 @@
         box-shadow: inset 0 0 5px rgb(109, 109, 109);
         padding: 0;
         p {
+            font-size: 14px;
             padding: 1px;
+            position: absolute;
+            top: -3px;
         }
         .suit {
             position: absolute;
-            top: 40%;
-            left: 30%;
+            top: 14px;
+            left: 1px;
+            font-size: 8px;
+        }
+        .suit2 {
+            position: absolute;
+            top: 22px;
+            left: 8px;
+            font-size: 18px;
         }
     }
     .backCard {
