--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -1,14 +1,18 @@
 .table {
-    background-color: rgb(97, 153, 97);
-    width: 80vw !important;
-    height: 80vh;
-    border-radius: 50%;
-    margin: auto;
+    position: relative;
+    background-color: rgb(11, 102, 11); 
+    background-image: radial-gradient(rgb(19, 167, 0), rgb(6, 58, 6));
+    width: 800px !important;
+    height: 400px;
+    border-radius: 200px;
+    border: 20px solid rgb(77, 31, 31) !important;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     .pot{
+        position: absolute;
+        top: 60px;
         border: none !important;
         height: fit-content;
         text-align: center;
