--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -1,88 +1,176 @@
 .players {
-    width: 150px;
-    height: 200px;
+    width: 210px;
+    height: 220px;
     border:none !important;
     position: absolute;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
-    h5{
-        color: white;
-    }
-    .hand {
-        position: relative;
-        top: -25px;
+    .playerContainer {
         display: flex;
-        width: fit-content;
-    }
-    .portrait {
-        position: relative;
-        img {
-            height: 100px;
-            border-radius: 50% ;  
-        }
-        .timer{
-            position: absolute;
-            top: 0px;
-            height: 100px !important;
-            width: 100px !important;
-        }
-    }
-    .chips {
-        display: flex;
-        height: 20px;
-        position: relative;
-        top: -15px;
-        p {
-            padding: 0;
-            margin-left: 5px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        h5{
             color: white;
-        }
-        img {
             padding: 0;
+            margin: 2px;
+        }
+        .hand {
+            position: relative;
+            top: -25px;
+            display: flex;
+            width: fit-content;
+        }
+        .portrait {
+            position: relative;
+            padding: 0;
+            img {
+                height: 100px;
+                border-radius: 50% ;  
+            }
+            .timer{
+                position: absolute;
+                top: 0px;
+                height: 100px !important;
+                width: 100px !important;
+            }
+        }
+        .chips {
+            display: flex;
             height: 20px;
+            position: relative;
+            top: -35px;
+            p {
+                padding: 0;
+                margin-left: 5px;
+                color: white;
+            }
+            img {
+                padding: 0;
+                height: 20px;
+            }
+        }
+    }
+    .currentAction {
+        background-color: rgba(128, 255, 0, 0.397);
+        border-radius: 20px;
+        color: white;
+        position: absolute;
+        width: fit-content;
+        font-size: 14px;
+        padding: 0 5px;
+        span {
+            margin-left: 2px;
+            padding: 0;
+        }
+        svg {
+            padding: 0 !important;
         }
     }
     .actions {
+        position: relative;
+        float: right;
         display: flex;
-       
-        p {
-            text-align: center;
-            color: white;
-            font-size: 14px;
-        }
-        button {
+        flex-direction: column;
+        height: fit-content;
+        top: -15px;
+        div {
+            height: 35px;
             display: flex;
-            justify-content: center;
             align-items: center;
-            margin: 3px;
-            padding: 0;
-            border: transparent;
-            border-radius: 20px;
-            height: 25px;
-            width: 25px;
-            background-color: rgba(255, 255, 255, 0.747);
-            &:hover {
-                background-color: rgba(255, 255, 255, 0.945);
-            } 
-            svg {
-                height: 16px;
+            p {
+                color: white;
+                font-size: 14px;
+                margin: auto;
+                padding-left: 5px;
+                width: 50px;
+            }
+            button {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 3px;
+                padding: 0;
+                border: transparent;
+                border-radius: 20px;
+                height: 25px;
+                width: 25px;
+                background-color: rgba(255, 255, 255, 0.747);
+                &:hover {
+                    background-color: rgba(255, 255, 255, 0.945);
+                } 
+                svg {
+                    height: 16px;
+                }
             }
         }
     }
 }
 .player1{
-    top: 35%;
-    left: -10%;
+    top: -35%;
+    right: 0%;
+    .currentAction {
+        top: 90%;
+        right: 90%
+    }
 }
 .player2{
-    top: 70%;
-    left: 15%;
+    top: 5%;
+    right: -22%;
+    .currentAction {
+        bottom: 25%;
+        right: 100%;
+    }
 }
 .player3{
-    top: 75%;
-    left: 40%;
+    top: 70%;
+    right: -17%;
+    .currentAction {
+        bottom: 80%;
+        right: 100%;
+    }
 }
+.player4{
+    top: 85%;
+    right: 13%;
+    .currentAction {
+        bottom: 100%;
+        right: 70%;
+    }
+}
+.player5{
+    top: 85%;
+    left: 28%;
+    .currentAction {
+        bottom: 100%;
+        right: 70%;
+    }
+}
+.player6{
+    top: 70%;
+    left: -3%;
+    .currentAction {
+        bottom: 80%;
+        left: 50%;
+    }
+}
+.player7{
+    top: 5%;
+    left: -8%;
+    .currentAction {
+        bottom: 25%;
+        left: 50%;
+    }
+}
+.player8{
+    top: -35%;
+    left: 15%;
+    .currentAction {
+        top: 90%;
+        left: 30%;
+    }
+}
+
 
 
