some changes to player component

--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -107,7 +107,7 @@
         }
     }
 }
-.player1{
+#player1{
     top: -35%;
     right: 0%;
     .currentAction {
@@ -115,7 +115,7 @@
         right: 90%
     }
 }
-.player2{
+#player2{
     top: 5%;
     right: -22%;
     .currentAction {
@@ -123,7 +123,7 @@
         right: 100%;
     }
 }
-.player3{
+#player3{
     top: 70%;
     right: -17%;
     .currentAction {
@@ -131,7 +131,7 @@
         right: 100%;
     }
 }
-.player4{
+#player4{
     top: 85%;
     right: 13%;
     .currentAction {
@@ -139,7 +139,7 @@
         right: 70%;
     }
 }
-.player5{
+#player5{
     top: 85%;
     left: 28%;
     .currentAction {
@@ -147,7 +147,7 @@
         right: 70%;
     }
 }
-.player6{
+#player6{
     top: 70%;
     left: -3%;
     .currentAction {
@@ -155,7 +155,7 @@
         left: 50%;
     }
 }
-.player7{
+#player7{
     top: 5%;
     left: -8%;
     .currentAction {
@@ -163,7 +163,7 @@
         left: 50%;
     }
 }
-.player8{
+#player8{
     top: -35%;
     left: 15%;
     .currentAction {
