--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -7,22 +7,25 @@
 
   .home-wrapper {
     width: 1130px;
-
+    height: 597px;
     .twin-container {
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-
+      height: 100%;
+      width: 100%;
       .home-box {
-        width: 490px;
-        height: 597px;
+        width: 30%;
+        height: inherit;
         background-size: cover;
         background-position: 50% 50%;
         position: relative;
         text-align: center;
-        padding: 72px;
         color: white;
-
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      
         &::after {
           background-color: rgba(0, 0, 0, 0.4);
           position: absolute;
@@ -36,50 +39,134 @@
         .home-box-container {
           z-index: 10;
           position: relative;
-
+          width: 90%;
           .home-box-header {
-            font-size: 50px;
+            width: 100%;
+            font-size: 40px;
             margin-bottom: 78px;
           }
           .stakes-header {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
             font-size: 20px;
-            margin-bottom: 60px;
+            margin-bottom: 50px;
+
+            p {
+              margin: 10px;
+            }
           }
 
           .stake-box {
-            width: 209px;
+            width: 100%;
             margin: 0 auto;
           
             .stake-inside-flex {
               background-color: #C4C4C4;
               display: flex;
               flex-flow: row;
-              justify-content: right;
+              justify-content: space-between;
               align-items: center;
               width: 100%;
               margin-bottom: 24px;
-              padding: 6px 0;
+              padding: 10px;
               font-size: 25px;
               color: black;
-
-              .chip-wrapper {
-                background-image: url("../../icons/poker-chips\ 2.png");
-                background-size: cover;
-                background-position: 50% 50%;
-                width: 50px;
-                height: 37px;
-                margin: 0px 48px 0 25px;
+              p {
+                margin: 0;
               }
+              .stakes {
+                display: flex;
+                align-items: center;
+                .chip-wrapper {
+                  background-image: url("../../icons/poker-chips\ 2.png");
+                  background-size: cover;
+                  background-position: 50% 50%;
+                  width: 50px;
+                  height: 37px;
+                  margin-right: 10px;
+                }
+              }
+            }
+          }
+          .privacy {
+            position: absolute;
+            width: 100%;
+            text-align: center;
+            input {
+              margin: 5px;
+            }
+            label {
+              margin-right: 20px;
             }
           }
         }
       }
-
+      .column3 {
+        height: inherit;
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        .join-private, .item-shop {
+          position: relative;
+          width: 100%;
+          padding: 10;
+          height: 45%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-size: cover;
+          div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            text-align: center;
+            h1 {
+              width: fit-content;
+              margin: 0;
+              margin: 30px;
+              z-index: 10;
+            }
+            form {
+              z-index: 10;
+              input, button {
+                border-radius: 5px;
+                border: transparent;
+                outline: none;
+                padding: 5px;
+                width: 100px;
+                margin: 5px;
+              }
+            }
+            width: 90%;
+            &::after {
+              background-color: rgba(0, 0, 0, 0.4);
+              position: absolute;
+              top: 0;
+              left: 0;
+              right: 0;
+              bottom: 0;
+              content: ' ';
+            }
+          }
+        }
+      }
+      
       #join-table {
         background-image: url("../../icons/michal-parzuchowski-GikVY_KS9vQ-unsplash.jpg");
       }
       #item-shop {
         background-image: url("../../icons/poker-3956037_1920.jpg");
+      }
+      #join-private {
+        background-image: url("../../icons/bg4.jpg");
+      }
+      #create_room{
+        background-image: url("../../icons/bg5.jpg");
       }
     }
   }
