--- a/src/pages/Game/Game.scss
+++ b/src/pages/Game/Game.scss
@@ -1,7 +1,11 @@
 .gamebackground{
+    position: absolute;
     background-image: url("../../icons/casinobg.jpg");
     background-size: cover;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    z-index: 1000;
     .game {
         position: relative;
         display: flex;
