--- a/src/pages/Game/Game.scss
+++ b/src/pages/Game/Game.scss
@@ -21,5 +21,10 @@
             font-size: 50px;
             color: rgb(218, 236, 58);
         }
+        #start {
+            position: absolute;
+            bottom: 40vh;
+            left: 45vw;
+        }
     }
 }
