--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -74,6 +74,7 @@
               color: black;
               p {
                 margin: 0;
+                font-size: 18px;
               }
               .stakes {
                 display: flex;
